# spfresh-neo

./: .clang-format  AGENTS.md  BUGFIX.md  CMakeLists.txt  PROMPT.md  README.md  SPFreshInterface_README.md  infinite-loop.sh  test_spdk_mapping
.cache/clangd/index/: AggregatorContext.cpp.9AB442E9870943D6.idx  AggregatorContext.h.6CE5963856EEC9BC.idx  AggregatorExecutionContext.cpp.A437E85948CDF6F6.idx  AggregatorExecutionContext.h.1C526E287CB751B4.idx  AggregatorService.cpp.8A65BF4F8DA523A0.idx  AggregatorService.h.75106FB5C0AC69E1.idx  AggregatorSettings.cpp.6553A045A2518E00.idx  AggregatorSettings.h.9F85F448E8AA26E1.idx  ArgumentsParser.cpp.4FC2E1F623C37B54.idx  ArgumentsParser.h.350A5C404636C187.idx  AsyncFileReader.cpp.C6E64B1B939B1CE2.idx  AsyncFileReader.h.E1034418721310C2.idx  BKTIndex.cpp.5FD8D25661BFE7E4.idx  BKTree.h.55F5AFA80C2A2DB4.idx  Base64Encode.cpp.9DAF5E95BCE3D117.idx  Base64Encode.h.A9B0E40F041FA514.idx  Client.cpp.BC2B84A285B34CE7.idx  Client.h.492A2ED75F481B5E.idx  ClientWrapper.cpp.11335C91362E6E0B.idx  ClientWrapper.h.04E5B1AF609D010A.idx  Common.cpp.FAD18331F878F1E3.idx  Common.h.11304AC2370E856B.idx  Common.h.FBB2C9B51867283B.idx  CommonDataStructure.h.8A3279FB646A288E.idx  CommonHelper.cpp.DF84CBBEA2D870F9.idx  CommonHelper.h.B3E2C14950AC0E64.idx  CommonUtils.cpp.4D4EE6FD9558956B.idx  CommonUtils.h.DFF46FB8FFA0DA73.idx  Compressor.h.8898ABCC766D2819.idx  Concurrent.cpp.A3730E04B9ECB103.idx  Concurrent.h.2FE703C57E3C9A86.idx  ConcurrentSet.h.37EE6FA8211C4536.idx  Connection.cpp.CB9B04DBD775A97F.idx  Connection.h.2531791D50949204.idx  ConnectionManager.cpp.B99FEE04430C9936.idx  ConnectionManager.h.5CFF604148B9F8FC.idx  Dataset.h.A7D8FD494B66E2D2.idx  DefaultReader.cpp.0076F91E1E4129DE.idx  DefaultReader.h.FF47F437D66FB2B3.idx  DefinitionList.h.FE37C296CD3BD1A4.idx  (+94 more)
cmake/: Findrocksdb.cmake  GitProject.cmake
include/Aggregator/: AggregatorContext.h  AggregatorExecutionContext.h  AggregatorService.h
include/Client/: ClientWrapper.h  Options.h
include/Core/: Common.h  CommonDataStructure.h  DefinitionList.h  MetaDataManager.h  MetadataSet.h  SearchQuery.h  SearchResult.h  VectorIndex.h  VectorSet.h
include/Core/BKT/: Index.h  ParameterDefinitionList.h
include/Core/Common/: BKTree.h  Dataset.h  FineGrainedLock.h  Heap.h  IQuantizer.h  KDTree.h  KNearestNeighborhoodGraph.h  Labelset.h  NeighborhoodGraph.h  OPQQuantizer.h  PQQuantizer.h  PostingSizeRecord.h  QueryResultSet.h  RelativeNeighborhoodGraph.h  TruthSet.h  VersionLabel.h  WorkSpace.h  WorkSpacePool.h
include/Core/Common/cuda/: Distance.hxx  GPUKNNDistance.hxx  GPUQuantizer.hxx  KNN.hxx  Kmeans.hxx  Refine.hxx  TPtree.hxx  TailNeighbors.hxx  ThreadHeap.hxx  log.hxx  params.h
include/Core/Common/cuda/tests/: Makefile
include/Core/KDT/: Index.h  ParameterDefinitionList.h
include/Core/SPANN/: Compressor.h  ExtraDynamicSearcher.h  ExtraRocksDBController.h  ExtraSPDKController.h  ExtraStaticSearcher.h  IExtraSearcher.h  Index.h  Options.h  ParameterDefinitionList.h  PersistentBuffer.h
include/Helper/: ArgumentsParser.h  AsyncFileReader.h  Base64Encode.h  CommonHelper.h  Concurrent.h  ConcurrentSet.h  DiskIO.h  DynamicNeighbors.h  KeyValueIO.h  LockFree.h  Logging.h  ResultWriter.h  SimpleIniReader.h  StringConvert.h  ThreadPool.h  TracePlayer.h  VectorSetReader.h
include/Helper/VectorSetReaders/: DefaultReader.h  MemoryReader.h  TxtReader.h  XvecReader.h
include/Quantizer/: Training.h
include/SPFresh/: SPFresh.h  SPFreshInterface.h
include/SSDServing/: SSDIndex.h  SelectHead.h  Utils.h  main.h
include/Server/: QueryParser.h  SearchExecutionContext.h  ServiceContext.h
include/Socket/: Client.h  Connection.h  ConnectionManager.h  RemoteSearchQuery.h  SimpleSerialization.h
include/Utils/: CommonUtils.h  DistanceUtils.h  InstructionUtils.h  SIMDUtils.h
script/: README.md  SETUP_COMPLETE.md  bdev-uring.json  bdev-user-va.json  check_spdk_status.sh  run_deep1b.sh  run_sift1b.sh  run_spacev1b.sh  run_spfresh_stress_test.sh  setup-hugepages.sh  setup-spdk-user.sh  setup_spdk.sh  test_spfresh_scale_experiment.sh
src/Aggregator/: AggregatorContext.cpp  AggregatorExecutionContext.cpp  AggregatorService.cpp  AggregatorSettings.cpp  main.cpp
src/BalancedDataPartition/: main.cpp
src/Client/: ClientWrapper.cpp  Options.cpp  main.cpp
src/Core/: MetaDataManager.cpp  MetadataSet.cpp  VectorIndex.cpp  VectorSet.cpp
src/Core/BKT/: BKTIndex.cpp
src/Core/Common/: IQuantizer.cpp  Kernel.cu  NeighborhoodGraph.cpp  TruthSet.cpp
src/Core/KDT/: KDTIndex.cpp
src/Core/SPANN/: ExtraSPDKController.cpp  SPANNIndex.cpp
src/Helper/: ArgumentsParser.cpp  AsyncFileReader.cpp  Base64Encode.cpp  CommonHelper.cpp  Concurrent.cpp  DynamicNeighbors.cpp  SimpleIniReader.cpp  VectorSetReader.cpp
src/Helper/VectorSetReaders/: DefaultReader.cpp  TxtReader.cpp  XvecReader.cpp
src/IndexBuilder/: main.cpp
src/IndexSearcher/: main.cpp
src/Quantizer/: main.cpp
src/SPFresh/: SPFreshInterface.cpp  example_create_index.cpp  example_create_index_spdk.cpp  example_usage.cpp  main.cpp  spfresh_stress_test.cpp  spfresh_stress_test_uint8.cpp
src/SSDServing/: main.cpp
src/Server/: QueryParser.cpp  SearchExecutionContext.cpp  SearchExecutor.cpp  SearchService.cpp  ServiceContext.cpp  ServiceSettings.cpp  main.cpp
src/Socket/: Client.cpp  Common.cpp  Connection.cpp  ConnectionManager.cpp  Packet.cpp  RemoteSearchQuery.cpp  Server.cpp
src/UsefulTool/: main.cpp
src/Utils/: CommonUtils.cpp  DistanceUtils.cpp  InstructionUtils.cpp  SIMDUtils.cpp  generate_vector_data.cpp
unittest/: BKTSerializationTest.cpp  ExtraSPDKControllerTest.cpp  ResultWriterParallelTest.cpp  SPANNIndexBuildTest.cpp  TracePlayerParallelTest.cpp
